Add search endpoints
