# app/Http/Controllers/CategoryController.php
@@ -53,6 +53,55 @@ class CategoryController extends Controller
     }
 
     /**
+     * search categories.
+     *
+     * @OA\Get(
+     *      path="/api/categories/search/{search_term}",
+     *      tags={"category"},
+     *      @OA\Parameter(
+     *          name="search_term",
+     *          in="path",
+     *          description="search_term",
+     *          @OA\Schema(
+     *              format="string",
+     *              default=""
+     *          )
+     *      ),
+     *      @OA\Parameter(
+     *          name="page",
+     *          in="query",
+     *          description="number of page",
+     *          @OA\Schema(
+     *              format="int64",
+     *              default=1
+     *          )
+     *      ),
+     *      @OA\Parameter(
+     *          name="perpage",
+     *          in="query",
+     *          description="number of items in a page",
+     *          @OA\Schema(
+     *              format="int64",
+     *              default=10
+     *          )
+     *      ),
+     *      @OA\Response(
+     *          response=200,
+     *          description="ok",
+     *          @OA\JsonContent()
+     *      )
+     * )
+     */
+    public function search(Request $req, string $term)
+    {
+        $perpage = intval($req->query('perpage', 10));
+        return CategoryResource::collection(Category
+            ::withCount('movies')
+            ->whereLike('name', "%$term%")
+            ->paginate($perpage));
+    }
+
+    /**
      * create new category.
      *
      * @OA\Post(
